--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title> CSS3 Transform Using Mouse Position</title>
     <link rel="stylesheet" href="css/main.css">
     <script src=""></script>
 </head>
@@ -15,4 +15,6 @@
         <img src="https://images.unsplash.com/photo-1533647326420-d4097513dc42?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=753&q=80" alt="Nature Image">
     </div>
     <script src="js/main.js"></script>
-</body></html>
+</body>
+
+</html>
